# qs-opengl-glfw-glad-cmake

./: CMakeLists.txt  InitCommands.txt  Scripts.txt  main.cpp
